depend on core module